fixed stretching with pictures

--- a/assets/css/people.css
+++ b/assets/css/people.css
@@ -4,7 +4,7 @@ body {
 
 .style-fix img {
     height: 50%;
-    width: 40%;
+    width: 35%;
     display: block;
     margin-left: auto;
     margin-right: auto;
